--- a/main.html
+++ b/main.html
@@ -4,11 +4,85 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+	<h1>Internship Form</h1>
+	<div class="container-fluid">
+		<form class="row g-3 was-validated">
+			<div class="col-md-4">
+			  <label for="validationServer01" class="form-label">First name</label>
+			  <input type="text" class="form-control" id="first-name-input" value="" required>
+			  <div id="validationServer03Feedback" class="invalid-feedback">
+				First name required!
+			  </div>
+			</div>
+			<div class="col-md-4">
+			  <label for="validationServer02" class="form-label">Last name</label>
+			  <input type="text" class="form-control" id="last-name-input" value="" required>
+			  <div id="validationServerUsernameFeedback" class="invalid-feedback">
+				Last name required!
+				</div>
+			</div>
+			<div class="col-md-4">
+			  <label for="validationServerUsername" class="form-label">Email</label>
+			  <div class="input-group has-validation">
+				<input type="text" class="form-control" id="email-input" aria-describedby="inputGroupPrepend3 validationServerUsernameFeedback" required>
+				<div id="validationServerUsernameFeedback" class="invalid-feedback">
+				  Email required!
+				</div>
+			  </div>
+			</div>
+			<div class="col-md-6">
+			  <label for="validationServer03" class="form-label">College</label>
+			  <input type="text" class="form-control" id="college-input" aria-describedby="validationServer03Feedback" required>
+			  <div id="validationServer03Feedback" class="invalid-feedback">
+				Please provide a valid college.
+			  </div>
+			</div>
+			<div class="col-md-3">
+			  <label for="validationServer04" class="form-label">Graduate Year</label>
+			  <select class="form-select" id="validationServer04" aria-describedby="validationServer04Feedback" required>
+				<option selected disabled value="">Choose...</option>
+				<option>2020</option>
+				<option>2021</option>
+				<option>2022</option>
+				<option>2023</option>
+			  </select>
+			  <div id="validationServer04Feedback" class="invalid-feedback">
+				Please select a valid Graduation Year.
+			  </div>
+			</div>
+			<div class="col-md-3">
+			  <label for="validationServer05" class="form-label">Roll No.</label>
+			  <input type="number" class="form-control is-invalid" id="roll-no-input" aria-describedby="validationServer05Feedback" required>
+			  <div id="validationServer05Feedback" class="invalid-feedback">
+				Please provide a valid Roll no.
+			  </div>
+			</div>
+			<div class="col-12">
+			  <div class="form-check">
+				<input class="form-check-input" type="checkbox" value="" id="conditions-checkbox" aria-describedby="invalidCheck3Feedback" required>
+				<label class="form-check-label" for="invalidCheck3">
+				  Agree to terms and conditions
+				</label>
+				<div id="invalidCheck3Feedback" class="invalid-feedback">
+				  You must agree before submitting.
+				</div>
+			  </div>
+			</div>
+			<div class="col-12">
+			  <button class="btn btn-primary" type="submit">Submit form</button>
+			</div>
+		  </form>
+	</div>
+	<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
