--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
 	<div class="container-fluid">
 		<form class="row g-3 was-validated">
 			<div class="col-md-4">
-			  <label for="validationServer01" class="form-label">First name</label>
+			  <label for="first-name-input" class="form-label">First name</label>
 			  <input type="text" class="form-control" id="first-name-input" value="" required>
 			  <div id="validationServer03Feedback" class="invalid-feedback">
 				First name required!
@@ -33,7 +33,7 @@
 			<div class="col-md-4">
 			  <label for="validationServerUsername" class="form-label">Email</label>
 			  <div class="input-group has-validation">
-				<input type="text" class="form-control" id="email-input" aria-describedby="inputGroupPrepend3 validationServerUsernameFeedback" required>
+				<input type="email" class="form-control" id="email-input" aria-describedby="inputGroupPrepend3 validationServerUsernameFeedback" required>
 				<div id="validationServerUsernameFeedback" class="invalid-feedback">
 				  Email required!
 				</div>
@@ -47,8 +47,8 @@
 			  </div>
 			</div>
 			<div class="col-md-3">
-			  <label for="validationServer04" class="form-label">Graduate Year</label>
-			  <select class="form-select" id="validationServer04" aria-describedby="validationServer04Feedback" required>
+			  <label for="grad-year-select" class="form-label">Graduate Year</label>
+			  <select class="form-select" id="grad-year-select" aria-describedby="validationServer04Feedback" required>
 				<option selected disabled value="">Choose...</option>
 				<option>2020</option>
 				<option>2021</option>
