--- a/main.html
+++ b/main.html
@@ -60,8 +60,8 @@
 			  </div>
 			</div>
 			<div class="col-md-3">
-			  <label for="validationServer05" class="form-label">Roll No.</label>
-			  <input type="number" class="form-control is-invalid" id="roll-no-input" aria-describedby="validationServer05Feedback" required>
+			  <label for="roll-no-input" class="form-label">Roll No.</label>
+			  <input type="text" class="form-control is-invalid" id="roll-no-input" aria-describedby="validationServer05Feedback" required>
 			  <div id="validationServer05Feedback" class="invalid-feedback">
 				Please provide a valid Roll no.
 			  </div>
