--- a/main.html
+++ b/main.html
@@ -17,14 +17,14 @@
 	<div class="container-fluid">
 		<form class="row g-3 was-validated">
 			<div class="col-md-4">
-			  <label for="first-name-input" class="form-label">First name</label>
+			  <label for="first-name-input" class="form-label">First Name</label>
 			  <input type="text" class="form-control" id="first-name-input" value="" required>
 			  <div id="validationServer03Feedback" class="invalid-feedback">
 				First name required!
 			  </div>
 			</div>
 			<div class="col-md-4">
-			  <label for="validationServer02" class="form-label">Last name</label>
+			  <label for="last-name-input" class="form-label">Last Name</label>
 			  <input type="text" class="form-control" id="last-name-input" value="" required>
 			  <div id="validationServerUsernameFeedback" class="invalid-feedback">
 				Last name required!
