--- a/main.html
+++ b/main.html
@@ -31,7 +31,7 @@
 				</div>
 			</div>
 			<div class="col-md-4">
-			  <label for="validationServerUsername" class="form-label">Email</label>
+			  <label for="email-input" class="form-label">Email</label>
 			  <div class="input-group has-validation">
 				<input type="email" class="form-control" id="email-input" aria-describedby="inputGroupPrepend3 validationServerUsernameFeedback" required>
 				<div id="validationServerUsernameFeedback" class="invalid-feedback">
