--- a/main.html
+++ b/main.html
@@ -31,7 +31,7 @@
 				</div>
 			</div>
 			<div class="col-md-4">
-			  <label for="email-input" class="form-label">Email</label>
+			  <label for="email-input" class="form-label">Email Address</label>
 			  <div class="input-group has-validation">
 				<input type="email" class="form-control" id="email-input" aria-describedby="inputGroupPrepend3 validationServerUsernameFeedback" required>
 				<div id="validationServerUsernameFeedback" class="invalid-feedback">
@@ -47,7 +47,7 @@
 			  </div>
 			</div>
 			<div class="col-md-3">
-			  <label for="grad-year-select" class="form-label">Graduate Year</label>
+			  <label for="grad-year-select" class="form-label">Graduation Year</label>
 			  <select class="form-select" id="grad-year-select" aria-describedby="validationServer04Feedback" required>
 				<option selected disabled value="">Choose...</option>
 				<option>2020</option>
