--- a/main.html
+++ b/main.html
@@ -40,7 +40,7 @@
 			  </div>
 			</div>
 			<div class="col-md-6">
-			  <label for="validationServer03" class="form-label">College</label>
+			  <label for="college-input" class="form-label">College</label>
 			  <input type="text" class="form-control" id="college-input" aria-describedby="validationServer03Feedback" required>
 			  <div id="validationServer03Feedback" class="invalid-feedback">
 				Please provide a valid college.
