--- a/main.html
+++ b/main.html
@@ -69,7 +69,7 @@
 			<div class="col-12">
 			  <div class="form-check">
 				<input class="form-check-input" type="checkbox" value="" id="conditions-checkbox" aria-describedby="invalidCheck3Feedback" required>
-				<label class="form-check-label" for="invalidCheck3">
+				<label class="form-check-label" for="conditions-checkbox">
 				  Agree to terms and conditions
 				</label>
 				<div id="invalidCheck3Feedback" class="invalid-feedback">
